--- a/contacts.html
+++ b/contacts.html
@@ -5,5 +5,5 @@
 ИНН XXXXXXXX<br />
 КПП XXXXXXXX<br />
 ОГРН XXXXXXXX<br /></p><p>Юрид. адрес:<br />
-142784, Москва, <br class=".visible-xs-inline" />Бизнес-парк «Румянцево»<br class=".visible-xs-inline" /> строение 2, <br />
+142784, Москва, <br class="visible-xs-inline" />Бизнес-парк «Румянцево»<br class="visible-xs-inline" /> строение 2, <br />
 корпус В, подъезд 16, офис 820В</p></div></div></section><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab7f25d14c47484e349cda7b4d30dc9f6d4e485bbddee098525b4ab11d7dd5c28&amp;source=constructor" width="100%" height="568" frameborder="0"></iframe></main></body></html>
