--- a/delivery.html
+++ b/delivery.html
@@ -38,6 +38,11 @@ var nav = $('.main-header');
 
 $window.on('scroll', function () {
     var scrollTop = $window.scrollTop();
-    nav.toggleClass('main-header--scrolled', scrollTop > prev);
+
+    if (scrollTop === 0) {
+        nav.removeClass('main-header--scrolled')
+    } else {
+        nav.addClass('main-header--scrolled', scrollTop > prev);
+    }
     prev = scrollTop;
 });</script></main></body></html>
